Add Jakarta EE 10 development environment documentation
This commit adds comprehensive documentation for the Jakarta EE 10
development environment setup and usage.

📚 Documentation Added:
- README.md: Quick start section for Jakarta EE development
- JAKARTA-DEVELOPMENT.md: Detailed setup and troubleshooting guide

🎯 Key Information Covered:
- Java 17 and Maven prerequisites
- CouchDB Docker container setup
- Java module system configuration (MAVEN_OPTS)
- Development server startup procedures
- CMIS endpoint verification steps
- Common troubleshooting scenarios

🚀 Quick Start Summary:
1. Start CouchDB container with admin:password
2. Set MAVEN_OPTS for Java 17 module opening
3. Run mvn jetty:run -Pjakarta -Djetty.port=8081
4. Access CMIS at http://localhost:8081/core/atom/bedroom

The documentation uses environment-agnostic paths and provides
clear step-by-step instructions for developers to quickly
set up the Jakarta EE development environment.

🤖 Generated with [Claude Code](https://claude.ai/code)

Co-Authored-By: Claude <noreply@anthropic.com>

Former-commit-id: e36d1f5ced7d467434f83b4244563d32609f93b3